move header gradient into a component so it can be attached to the bottom of the banner instead - hide on dark backgrounds and align top on legal page - fixes #16

--- a/src/stylesheets/components/_header-gradient.sass
+++ b/src/stylesheets/components/_header-gradient.sass
@@ -5,6 +5,13 @@
   height: 41.625rem
   position: absolute
   z-index: -1
+  bottom: 0
+
+  .legal-page &
+    bottom: unset
+
+  [data-slice-backgroundcolour="dark"] &
+    display: none
 
   &__circle,
   &__big-rectangle
